package latihan.document;

public class Printer {

    public void print(Document doc) {
        doc.print();
    }
}